<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:parentTag="android.widget.LinearLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/key_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/key_2"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_1"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/key_5"
            app:layout_constraintStart_toEndOf="@id/key_1"
            app:layout_constraintEnd_toStartOf="@id/key_3"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_2"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/key_6"
            app:layout_constraintStart_toEndOf="@id/key_2"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_3"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_1"
            app:layout_constraintBottom_toTopOf="@id/key_7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/key_5"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_4"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_2"
            app:layout_constraintBottom_toTopOf="@id/key_8"
            app:layout_constraintStart_toEndOf="@id/key_4"
            app:layout_constraintEnd_toStartOf="@id/key_6"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_5"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_3"
            app:layout_constraintBottom_toTopOf="@id/key_9"
            app:layout_constraintStart_toEndOf="@id/key_5"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_6"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_4"
            app:layout_constraintBottom_toTopOf="@id/key_decimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/key_8"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_7"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_5"
            app:layout_constraintBottom_toTopOf="@id/key_0"
            app:layout_constraintStart_toEndOf="@id/key_7"
            app:layout_constraintEnd_toStartOf="@id/key_9"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_8"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_6"
            app:layout_constraintBottom_toTopOf="@id/key_remove"
            app:layout_constraintStart_toEndOf="@id/key_8"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_9"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_decimal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/key_0"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_decimal"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/key_decimal"
            app:layout_constraintEnd_toStartOf="@id/key_remove"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_0"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_remove"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/key_0"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableStart="@drawable/ic_error_color_on_primary"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_remove"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_addition"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/key_multiplication"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_addition"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_addition"
            app:layout_constraintBottom_toTopOf="@id/key_decrease"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_multiplication"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_decrease"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_multiplication"
            app:layout_constraintBottom_toTopOf="@id/key_division"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_decrease"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_division"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_decrease"
            app:layout_constraintBottom_toTopOf="@id/key_summation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_division"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_summation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/key_division"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/label_widget_keyboard_key_summation"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</merge>