<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import
            type="com.github.ekamekas.koin.transaction.domain.entity.TransactionType" />
        <variable
            name="viewModel"
            type="com.github.ekamekas.koin.transaction.presentation.transaction_record.TransactionRecordViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/vKeyboard"
            android:gravity="center"
            android:background="@color/colorPrimaryDark">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/vOptionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:tabBackground="@color/colorPrimaryDark"
                app:tabInlineLabel="true"
                app:tabIndicatorHeight="4dp"
                app:tabMode="fixed"
                app:tabGravity="fill">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/btnOptionIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_income"/>

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/btnOptionExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_expense"/>

            </com.google.android.material.tabs.TabLayout>

            <HorizontalScrollView
                android:id="@+id/vValueContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/vOptionContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvLabelCurrency"
                android:background="@android:color/transparent"
                android:nestedScrollingEnabled="true"
                android:scrollbars="none"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:gravity="center_vertical|end"
                    app:layout_constraintTop_toBottomOf="@id/vOptionContainer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvLabelCurrency"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                    android:autofillHints="@string/value_default"
                    android:hint="@string/value_default"
                    android:textColorHint="@color/colorOnPrimaryDark"
                    android:textStyle="bold"
                    android:textColor="@color/colorOnPrimaryDark"
                    tools:text="100.000.000" />

            </HorizontalScrollView>

            <TextView
                android:id="@+id/tvLabelCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/vValueContent"
                app:layout_constraintStart_toEndOf="@id/vValueContent"
                app:layout_constraintEnd_toStartOf="@id/btnSwipe"
                android:layout_marginStart="8dp"
                android:layout_gravity="top"
                android:textColor="@color/colorOnPrimaryDark"
                android:text="@string/label_default_currency"
                android:textAllCaps="true"
                style="@style/TextAppearance.MaterialComponents.Headline4"/>

            <LinearLayout
                android:id="@+id/btnSwipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="@id/vValueContent"
                app:layout_constraintBottom_toBottomOf="@id/vValueContent"
                app:layout_constraintStart_toEndOf="@id/tvLabelCurrency"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/half_circle_snow"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|end"
                android:onClick="@{() -> viewModel.onNextPageClickEvent()}"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                tools:ignore="HardcodedText,UnusedAttribute">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_left"
                    android:contentDescription="@string/label_transaction"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.github.ekamekas.koin.transaction.presentation.widget.NumericKeyboard
            android:id="@+id/vKeyboard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/vContent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>